[gd_scene load_steps=12 format=3 uid="uid://ci81l4emhw6vh"]

[ext_resource type="PackedScene" uid="uid://npju2vv1s2jw" path="res://Characters/Components/health.tscn" id="1_oguqm"]
[ext_resource type="Script" path="res://Scripts/goomba.gd" id="1_qiye4"]
[ext_resource type="PackedScene" uid="uid://ime740wavl2t" path="res://Characters/Components/hurtbox.tscn" id="2_khcqv"]
[ext_resource type="Texture2D" uid="uid://b7p07ueu1n0sq" path="res://Art/Sprites/Enemies/Goomba.png" id="4_qekh7"]
[ext_resource type="PackedScene" uid="uid://rjaurwq7ahs" path="res://Characters/Components/contact_box.tscn" id="5_gh3ty"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7a1gx"]
size = Vector2(14, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_17dob"]
size = Vector2(16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgwl1"]
atlas = ExtResource("4_qekh7")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpjhj"]
atlas = ExtResource("4_qekh7")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_qnox8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgwl1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpjhj")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4p3km"]
size = Vector2(16, 16)

[node name="Goomba" type="CharacterBody2D"]
position = Vector2(0, -8)
collision_layer = 4
script = ExtResource("1_qiye4")
SPEED = 40.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_7a1gx")

[node name="Health" parent="." instance=ExtResource("1_oguqm")]
MAX_HEALTH = 2

[node name="Hurtbox" parent="." node_paths=PackedStringArray("health") instance=ExtResource("2_khcqv")]
health = NodePath("../Health")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_17dob")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(1.19209e-07, 4.17233e-07)
scale = Vector2(0.7, 0.8)

[node name="Animations" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qnox8")
animation = &"walk"

[node name="ContactBox" parent="." instance=ExtResource("5_gh3ty")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ContactBox"]
shape = SubResource("RectangleShape2D_4p3km")

[node name="RayCastSide" type="RayCast2D" parent="."]
target_position = Vector2(8, 0)

[connection signal="killed" from="Health" to="." method="_on_health_killed"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
